[gd_scene load_steps=4 format=3 uid="uid://dx53xbia02j7"]

[ext_resource type="Script" path="res://Scripts/Level/TitleScreen.gd" id="1_hohba"]
[ext_resource type="Texture2D" uid="uid://br48c1h02h87g" path="res://Assets/Buttons/StartButton.png" id="2_05fex"]
[ext_resource type="Texture2D" uid="uid://dljm4ieqpndwn" path="res://Assets/Buttons/PlayAgain.png" id="3_4dbu6"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hohba")

[node name="Start" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 247.0
offset_right = 709.0
offset_bottom = 346.0
texture_normal = ExtResource("2_05fex")
stretch_mode = 5

[node name="PlayAgain" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 389.0
offset_right = 715.0
offset_bottom = 488.0
texture_normal = ExtResource("3_4dbu6")
stretch_mode = 5

[connection signal="pressed" from="Start" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_texture_button_2_pressed"]
